Model benchmarks for Bert and Electra